--- a/my-portfolio/public/index.html
+++ b/my-portfolio/public/index.html
@@ -36,5 +36,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <!-- Script tag for GreenSock Tween Max animations -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
+    <script src="../src/Components/Jumbotron.js"></script> -->
   </body>
 </html>
